test/files/parser/errors/assign-note.otest
name = "Assign to note constant"
line = 2
character = 1
error = "Cannot assign a value to a number."

---

a4 = 0
